--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ picture: assets/images/profile.jpg
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://drive.google.com/file/d/1uROy5D59NZLLOAz6m-2MkRGlLmv05QSK/view?usp=sharing
+#resume-url: https://drive.google.com/file/d/1uROy5D59NZLLOAz6m-2MkRGlLmv05QSK/view?usp=sharing
 
 url: https://kaushkay.github.io
 # your url: http://USERNAME.github.io
@@ -53,19 +53,7 @@ medium: kaushlendrakumargiri
 # lanyrd: mylanyrd
 email: kaushlendra_11710238@nitkkr.ac.in
 
-authors:
-    johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
-        external-image: false
-        picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
