--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ resume-external: true
 #resume-url: https://drive.google.com/file/d/1uROy5D59NZLLOAz6m-2MkRGlLmv05QSK/view?usp=sharing
 
 url: https://kaushkay.github.io
-# your url: http://USERNAME.github.io
+your url: http://kaushkay.github.io
 
 permalink: /:title/
 
