--- a/_config.yml
+++ b/_config.yml
@@ -12,12 +12,12 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-external: true
+resume: false
+resume-external: false
 #resume-url: https://drive.google.com/file/d/1uROy5D59NZLLOAz6m-2MkRGlLmv05QSK/view?usp=sharing
 
 url: https://kaushkay.github.io
-your url: http://kaushkay.github.io
+#your url: http://USERNAME.github.io
 
 permalink: /:title/
 
@@ -68,7 +68,7 @@ width: normal
 projects: true
 
 # if you don't need "about" or "blog", comment them out below
-about: true
+about: false
 blog: true
 
 # do you want to show the "read time" of the posts?
