--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ email: kaushlendra_11710238@nitkkr.ac.in
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
-width: normal
+width: large
 
 # if you don't need pagination, comment the *paginate* configs below
 # paginate: 5
