--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ analytics-google: 'UA-138652325-1'
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-    shortname: @kaushkay # enter this from your disqus account
+    shortname: "kaushkay" # enter this from your disqus account
     categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
