--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: false
+resume: true
 resume-external: true
-# resume-url: https://drive.google.com/file/d/1uROy5D59NZLLOAz6m-2MkRGlLmv05QSK/view?usp=sharing
+resume-url: https://drive.google.com/file/d/1BbY7XZaRpt9HdCiNEbygPDEMoRbXOjVj/view?usp=sharing
 
 url: https://kaushkay.github.io
 #your url: http://USERNAME.github.io
