--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
+resume: false
 resume-external: true
 resume-url: https://drive.google.com/file/d/1BbY7XZaRpt9HdCiNEbygPDEMoRbXOjVj/view?usp=sharing
 
