--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-name: Kaushlendra Kumar Giri
+name: Kaushlendra Kumar Giri (kaushkay)
 bio: Machine Learning And Artificial Intelligence Enthusiast (also an Electrical Engineer)
 
 # twitter summary info
