--- a/_config.yml
+++ b/_config.yml
@@ -37,21 +37,21 @@ disqus:
 # facebook: myfacebook
 # twitter: mytwitter
 # google: mygoogle
-instagram: kaushkay
+#instagram: kaushkay
 # pinterest: mypinterest
-linkedin: kaushkay
+#linkedin: kaushkay
 # youtube: myyoutube
 # spotify: myspotify
-github: kaushkay
+#github: kaushkay
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: kaushlendrakumargiri
+#medium: kaushlendrakumargiri
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: kaushlendra_11710238@nitkkr.ac.in
+email: kaushkayy@gmail.com
 
 
 
@@ -65,7 +65,7 @@ width: large
 # paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
-projects: true
+projects: false
 
 # if you don't need "about" or "blog", comment them out below
 about: true
