--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,13 @@ disqus:
 #linkedin: kaushkay
 # youtube: myyoutube
 # spotify: myspotify
-#github: kaushkay
+github: kaushkay
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
-# reddit: username
-#medium: kaushlendrakumargiri
+reddit: kaushkay
+medium: kaushlendrakumargiri
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: kaushkayy@gmail.com
