--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Kaushlendra Kumar Giri
-bio: Machine Learning And Artificial Intelligence Enthusiast (also an Electrical Engineer)
+bio: Machine Learning & Artificial Intelligence Engineer
 
 # twitter summary info
 description: A blog about Deep Learning and stuff related
