--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ picture: assets/images/profile.jpg
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://drive.google.com/file/d/1XrVROb3NirJcCFICTvzcznbqzdnK9zLO/view?usp=sharing
+resume-url: https://drive.google.com/file/d/1TCFnltlT96MybIRNgps1Ph0Z9_9erARv/view?usp=share_link
 
 url: https://kaushkay.github.io
 #your url: http://USERNAME.github.io
